# calsync

./: .env.example  .gitignore  README.md  pyproject.toml
src/calsync/: config.py  crypto.py  db.py  deps.py  keygen.py  main.py  oauth.py  schema.sql
src/calsync/api/: admin.py  oauth.py  webhook.py
src/calsync/gapi/: auth.py  client.py  errors.py  throttle.py
src/calsync/jobs/: reconcile.py  renew_channels.py  scheduler.py
src/calsync/repositories/: accounts.py  calendars.py  event_links.py  watch_channels.py
src/calsync/sync/: context.py  delta.py  filters.py  locks.py  matrix.py  mirror.py  payload.py  processor.py
tests/: conftest.py  test_accounts_repo.py  test_admin_routes.py  test_config.py  test_crypto.py  test_db.py  test_ensure_mirror.py  test_event_links_repo.py  test_filters.py  test_gapi_auth.py  test_gapi_client_read.py  test_gapi_client_write.py  test_gapi_retry_throttle.py  test_healthz.py  test_jobs.py  test_keygen.py  test_oauth_routes.py  test_oauth_state.py  test_payload.py  test_processor.py  test_watch_channels_repo.py  test_webhook_route.py
