[project]
name = "calsync"
version = "0.1.0"
description = "Self-hosted Google Calendar sync across personal and work accounts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-api-python-client>=2.150",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "cryptography>=43",
    "apscheduler>=3.10",
    "httpx>=0.28",
    "tenacity>=9.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-recording>=0.13",
    "ruff>=0.8",
    "mypy>=1.13",
    "freezegun>=1.5",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calsync"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [
    ".venv",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern Python syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "N",    # pep8 naming conventions
    "C90",  # mccabe complexity
]
ignore = [
    "E501",   # line too long - relax initially
]

[tool.ruff.lint.isort]
known-first-party = [
    "calsync",
]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/calsync"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
omit = [
    "*/tests/*",
]
